--- a/.xosdutil/xosdutil.cfg
+++ b/.xosdutil/xosdutil.cfg
@@ -38,5 +38,11 @@ commands = (
 		command = "echo";
 		renderer = "echo";
 		duration = 2;
+	},
+	{
+		command = "bitcoins";
+		renderer = "exec";
+		run = "btcreport";
+		duration = 5;
 	}
 )
