--- a/.xosdutil/xosdutil.cfg
+++ b/.xosdutil/xosdutil.cfg
@@ -34,6 +34,13 @@ commands = (
 		run = "acpi";
 		duration = 5;
 	},
+
+	{
+		command = "acpi-event";
+		renderer = "exec";
+		run = "acpi";
+		duration = 1;
+	},
 	{
 		command = "echo";
 		renderer = "echo";
