xmonad: more WSs, .bashrc: server PS1, .vimperatorrc: C-L :noh

--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -18,3 +18,4 @@ noremap < :tabprevious<CR>
 noremap > :tabnext<CR>
 noremap , :tabprevious<CR>
 noremap . :tabnext<CR>
+noremap <C-l> :nohlsearch<CR>
