--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-*
+# *
+/*
 !.*
 .pentadactyl/info/safe/*
 .xsession-errors
@@ -9,7 +10,7 @@
 .Xauthority
 .ICEauthority
 .lesshst
-.maildir
+.maildir*
 .*history
 .*_hist
 .~lock*
@@ -33,6 +34,7 @@
 
 # obsahuje penezenku
 .bitcoin*
+.electrum
 
 .*.log
 
@@ -44,7 +46,7 @@
 
 .hwid
 
-.*.log
+*.log
 *xosdutilctl
 
 .vim/.netrwhist
@@ -83,7 +85,18 @@
 .adobe
 
 # obsahuje jenom "lokalni nastaveni": autojump, geeqie, ...
-.local
+.local/share/MonoDevelop-3.0
+.local/share/Trash
+.local/share/autojump
+.local/share/gegl-0.2
+.local/share/gnome-settings-daemon
+.local/share/icc
+.local/share/mc
+.local/share/telepathy
+.local/share/vlc
+.local/share/webkit
+.local/share/recently-used.xbel
+.local/share/orage
 
 .config/stetic/library-cache
 .config/geeqie/history
@@ -108,11 +121,14 @@
 
 # obsahuje pozici okna
 .config/gtk-2.0/gtkfilechooser.ini
-.config/transmission/settings.json
 
 # obsahuje cache fontu
 .config/libreoffice/3/user/psprint/
 .config/libreoffice/3/user/uno_packages/cache
+
+# obsahuje volatilni veci
+.config/libreoffice/3/user/extensions/*/buildid
+.config/libreoffice/3/user/extensions/*/extensions.db
 
 # obsahuje volatilni veci
 .config/dconf/user
@@ -148,7 +164,6 @@
 # obsahuje pozice okna Skypu
 .config/Skype/Skype.conf
 
-.config/transmission/dht.dat
 .adom.data/*
 
 # obsahuje pozice okna LyXu
@@ -165,6 +180,8 @@
 
 # obsahuje pozice okna Homebank
 .config/homebank/preferences
+# je volatilni
+.config/homebank/lastopenedfiles
 
 # obsahuje zbytecnosti
 .LuminanceHDR
@@ -177,6 +194,7 @@
 
 # obsahuje pozice okna
 .config/vlc/vlc-qt-interface.conf
+.config/vlc/vlcrc
 
 # neni dulezite a obsahuje zrejme secrets
 .Skype
@@ -190,8 +208,8 @@
 # .darcs
 */cache/*
 
-# cache LuaTeX
-.texlive/texmf-var/luatex-cache
+# celkove nechci zadne TeXLive
+.texlive
 
 # Gervill je syntetizer, zrejme pro TuxGuitar. neni potreba.
 .gervill
@@ -268,3 +286,156 @@
 
 # volatilni; velikost panelu
 .config/mc/ini
+.config/mc/panels.ini
+
+.config/geeqie/history
+.config/chromium
+.config/bless/history.xml
+.config/bless/last.session
+
+# obsahuje asi jenom sockety
+.dbus
+
+# obsahuje nainstalovane gemy
+.gem
+
+# hlavne .gstreamer-0.10/registry.x86_64.bin
+*.bin
+
+# obsahuje runtime veci
+.pulse
+
+# obsahuje historii, ...
+.elinks
+
+# obsahuje pozice okna Skypu
+.config/Skype/Skype.conf
+
+.config/transmission/dht.dat
+.adom.data/*
+
+# obsahuje pozice okna LyXu
+.config/LyX/lyx.conf
+
+# system-specific
+.config/xbuild
+
+# casto se meni
+.config/geeqie/geeqierc.xml
+.config/geeqie/accels
+.config/libreoffice/3/user/registrymodifications.xcu
+
+# obsahuje pozice okna Homebank
+.config/homebank/preferences
+
+# obsahuje zbytecnosti
+.LuminanceHDR
+
+# obsahuje pozice okna
+.config/Luminance
+
+# je cache
+.config/MonoDevelop-3.0/repository-cache
+
+# obsahuje pozice okna
+.config/vlc/vlc-qt-interface.conf
+
+# neni dulezite a obsahuje zrejme secrets
+.Skype
+
+# neni dulezite a je mutabilni
+.audacity-data
+
+# hlavne v .bundler
+*/tmp/*
+
+# cache LuaTeX
+.texlive/texmf-var/luatex-cache
+
+# Gervill je syntetizer, zrejme pro TuxGuitar. neni potreba.
+.gervill
+
+# ve Wiresharku nemam zadna divna nastaveni
+.wireshark
+
+# history, probably zsh
+.histfile
+
+# ltris: neni treba ukladat...
+.lgames
+
+# .lftp/rl_history: nechci
+*history*
+
+# obsahuje tajemstvi
+.subversion/auth
+.subversion/servers
+
+# obsahuje historii otevreni souboru
+.mono/mwf_config
+
+# obsahuje historii fishe
+.config/fish
+
+# recently used colors
+.gimp-2.8/colorrc
+
+# recently closed docks
+.gimp-2.8/dockrc
+
+# session-specific info
+.gimp-2.8/sessionrc
+
+# nastaveni nastroju: volatile
+.gimp-2.8/tool-options
+
+# volatile
+.gimp-2.8/parasiterc
+.gimp-2.8/templaterc
+.gimp-2.8/controllerrc
+.gimp-2.8/menurc
+
+# non-necessary
+.gimp-2.8/pluginrc
+
+.gimp-2.8/tags.xml
+
+.config/google-googletalkplugin/*.log.bz2
+
+# nechci zadne pidfiles
+.*pid
+
+# nechci steam
+.steam*
+
+*/recent-files
+
+# libpurple: online ucty
+.purple
+
+.gtk-bookmarks
+
+# vlastne Freemind ani LyX nepouzivam tak moc abych tohle vubec potreboval
+.freemind
+.lyx
+
+# volatilni a ohromne
+.eclipse
+
+.kde4/cache-*
+.kde4/socket-*
+.kde4/tmp-*
+
+# volatilni
+.kde4/share/config/*
+
+# LFTP historie a logy
+.lftp/*history
+.lftp/*log
+
+# avidemux: nic zajimaveho
+.avidemux
+
+# drobnosti s Octave
+.octaverc
+.octave_packages
