--- a/.muttrc
+++ b/.muttrc
@@ -77,7 +77,7 @@ set editor = 'vim'
 # set forward_quote = no
 
 #set from = 'pokorny.michael@ssakhk.cz'
-set from = 'mp@decin.cz'
+set from = 'pok@rny.cz'
 #set from='michal.pokorny@empyreum.com'
 
 # set gecos_mask = '^[^,]*'
@@ -213,7 +213,7 @@ set postpone = ask-yes
 # set quote_regexp = '^([ \t]*[|>:}#])+'
 # set read_inc = '10'
 # set read_only = no
-# set realname = '(empty)'
+set realname = 'Michal Pokorný'
 # set recall = ask-yes
 set record = '~/.maildir/sent'
 # set reply_regexp = '^(re([\[0-9\]+])*|aw):[ \t]*'
@@ -239,7 +239,7 @@ set sendmail = '/usr/sbin/sendmail' # -oem -oi
 # set shell = '(empty)'
 # set sig_dashes = yes
 # set sig_on_top = no
-# set signature = '~/.signature'
+set signature = '~/.signature'
 # set simple_search = '~f %s | ~s %s'
 # set sleep_time = '1'
 # set smart_wrap = yes
