+zim accelmap, preferences, +mc stuff, +gtkrc settings

--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings] 
-gtk-theme-name=Mist
+gtk-theme-name=Raleigh
 gtk-icon-theme-name=hicolor
 gtk-font-name=Terminus 8
 gtk-cursor-theme-size=0
