--- a/.config/zim/preferences.conf
+++ b/.config/zim/preferences.conf
@@ -15,7 +15,7 @@ always_use_last_cursor_pos=True
 follow_on_enter=True
 read_only_cursor=False
 autolink_camelcase=False
-autolink_files=True
+autolink_files=False
 autoselect=True
 unindent_on_backspace=True
 cycle_checkbox_type=True
@@ -25,7 +25,7 @@ auto_reformat=False
 copy_format=Text
 
 [General]
-plugins=["calendar","insertsymbol","printtobrowser","quicknote","gnuplot_ploteditor","tasklist","inlinecalculator"]
+plugins=["calendar","insertsymbol","printtobrowser","quicknote","gnuplot_ploteditor","tasklist","inlinecalculator","equationeditor"]
 
 [CalendarPlugin]
 embedded=False
