some stuff in zim

--- a/.config/zim/preferences.conf
+++ b/.config/zim/preferences.conf
@@ -10,6 +10,8 @@ text_editor=xdg-open
 toggle_on_altspace=False
 autosave_timeout=10
 always_use_last_cursor_pos=True
+mouse_nav_button_back=8
+mouse_nav_button_forw=9
 
 [PageView]
 follow_on_enter=True
@@ -23,6 +25,7 @@ recursive_indentlist=True
 recursive_checklist=False
 auto_reformat=False
 copy_format=Text
+file_templates_folder=~/Templates
 
 [General]
 plugins=["calendar","insertsymbol","printtobrowser","quicknote","gnuplot_ploteditor","tasklist","inlinecalculator","equationeditor"]
@@ -31,6 +34,7 @@ plugins=["calendar","insertsymbol","printtobrowser","quicknote","gnuplot_plotedi
 embedded=False
 namespace=Calendar
 granularity=Day
+pane=["left_pane","top"]
 
 [TaskListPlugin]
 all_checkboxes=True
@@ -38,4 +42,5 @@ tag_by_page=False
 labels=FIXME, TODO
 deadline_by_page=False
 next_label=Next:
+use_workweek=True
 
