--- a/.muttrc
+++ b/.muttrc
@@ -38,10 +38,10 @@
 set copy = yes
 # set crypt_autoencrypt = no
 set crypt_autopgp = yes
-# set crypt_autosign = no
+set crypt_autosign = yes
 # set crypt_autosmime = yes
-# set crypt_replyencrypt = yes
-# set crypt_replysign = no
+set crypt_replyencrypt = yes
+set crypt_replysign = yes
 # set crypt_replysignencrypted = no
 # set crypt_timestamp = yes
 # set crypt_use_gpgme = no
@@ -157,6 +157,7 @@ set move = yes
 # set pager_format = '-%Z- %C/%m: %-20.20n   %s%*  -- (%P)'
 # set pager_index_lines = '0'
 # set pager_stop = no
+set pgp_autosign=yes
 # set pgp_auto_decode = no
 # set pgp_autoinline = no
 # set pgp_check_exit = yes
