xosdutil.cfg += mpd status

--- a/.xosdutil/xosdutil.cfg
+++ b/.xosdutil/xosdutil.cfg
@@ -51,5 +51,11 @@ commands = (
 		renderer = "exec";
 		run = "btcreport";
 		duration = 5;
+	},
+	{
+		command = "mpd-status";
+		renderer = "exec";
+		run = "mpc status | head -n 1";
+		duration = 5;
 	}
 )
