--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings] 
-gtk-theme-name=Raleigh
+gtk-theme-name=Mist
 gtk-icon-theme-name=hicolor
-gtk-font-name=Terminus 8
+gtk-font-name=DejaVu Sans 8
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
@@ -12,6 +12,4 @@ gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
-gtk-xft-rgba=rgb
-gtk-enable-event-sounds=false
-gtk-enable-input-feedback-sounds=false
+gtk-xft-rgba=vrgb
