--- a/.muttrc
+++ b/.muttrc
@@ -127,7 +127,7 @@ set from = 'pok@rny.cz'
 # set mailcap_sanitize = yes
 # set maildir_header_cache_verify = yes
 # set maildir_trash = no
-# set mark_old = yes
+set mark_old = no # Don't mark unread new messages as old.
 # set markers = yes
 # set mask = '!^\.[^.]'
 set mbox = '~/mail/mbox'
@@ -179,7 +179,7 @@ set pgp_autosign=yes
 # set pgp_replyinline = no
 # set pgp_retainable_sigs = no
 # set pgp_show_unusable = yes
-# set pgp_sign_as = '(empty)'
+set pgp_sign_as = '0x2D04D4C2'
 # set pgp_sign_command = '(empty)'
 # set pgp_sort_keys = 'address'
 # set pgp_strict_enc = yes
