muttrc: explicitly set default smime key

--- a/.muttrc
+++ b/.muttrc
@@ -250,7 +250,7 @@ set signature = '~/.signature'
 # set smime_certificates = '(empty)'
 # set smime_decrypt_command = '(empty)'
 # set smime_decrypt_use_default_key = yes
-# set smime_default_key = '(empty)'
+set smime_default_key = '0x2D04D4C2'
 # set smime_encrypt_command = '(empty)'
 # set smime_encrypt_with = '(empty)'
 # set smime_get_cert_command = '(empty)'
