--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -1,11 +1,8 @@
 "1.0b3 (created: 2010/11/06 12:31:35)
 
 highlight CmdLine font-family: monospace !important; padding: 1px !important; font-size:.95em;
-set nojsdebugger
 set runtimepath=/home/prvak/.vimperator
 set wildmode=list:full
-set showtabline=multitab
-colorscheme zenburn
 " list:longest
 
 " buftabs?
@@ -19,3 +16,12 @@ noremap > :tabnext<CR>
 noremap , :tabprevious<CR>
 noremap . :tabnext<CR>
 noremap <C-l> :nohlsearch<CR>
+
+set hintchars=fjghdksla
+set newtab=all
+
+" complete search engine suggestions, too
+set complete=slfS
+
+" set suggestengines="google"
+
