--- a/.config/zim/preferences.conf
+++ b/.config/zim/preferences.conf
@@ -43,4 +43,7 @@ labels=FIXME, TODO
 deadline_by_page=False
 next_label=Next:
 use_workweek=True
+nonactionable_tags=
+included_subtrees=
+excluded_subtrees=
 
