xosdutil: fetchmail wakeup

--- a/.xosdutil/xosdutil.cfg
+++ b/.xosdutil/xosdutil.cfg
@@ -57,5 +57,11 @@ commands = (
 		renderer = "exec";
 		run = "mpc status | head -n 1";
 		duration = 5;
+	},
+	{
+		command = "fetchmail-wakeup";
+		renderer = "exec";
+		run = "fetchmail 2>&1";
+		duration = 3;
 	}
 )
