--- a/.ncmpcpp/config
+++ b/.ncmpcpp/config
@@ -5,3 +5,8 @@ mpd_music_dir = "/home/prvak/music"
 mpd_crossfade_time = 0
 volume_color = "cyan"
 follow_now_playing_lyrics = "yes"
+
+visualizer_fifo_path = "/tmp/mpd.fifo"
+visualizer_output_name = "Visualization FIFO"
+visualizer_sync_interval = "1"
+visualizer_type = "spectrum" # or "wave"
