--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -25,3 +25,6 @@ set complete=slfS
 
 " set suggestengines="google"
 
+highlight! Hint font-size: 15px; color: black; font-weight: bold; border: 1px solid black; background-color: #fff; text-transform: uppercase; padding: 3px; font-family: Terminus, monospace;
+highlight! HintElem background-color: transparent
+highlight! HintActive background-color: transparent
