--- a/.config/zim/preferences.conf
+++ b/.config/zim/preferences.conf
@@ -1,23 +1,22 @@
+[General]
+plugins=["calendar","insertsymbol","printtobrowser","versioncontrol"]
+
 [GtkInterface]
 tearoff_menus=False
 toggle_on_ctrlspace=False
 remove_links_on_delete=True
-gtk_bell=False
-file_browser=xdg-open
-web_browser=xdg-open
-email_client=xdg-email
-text_editor=xdg-open
-toggle_on_altspace=False
-autosave_timeout=10
 always_use_last_cursor_pos=True
+gtk_bell=False
+toggle_on_altspace=False
 mouse_nav_button_back=8
 mouse_nav_button_forw=9
+autosave_timeout=10
 
 [PageView]
 follow_on_enter=True
 read_only_cursor=False
-autolink_camelcase=False
-autolink_files=False
+autolink_camelcase=True
+autolink_files=True
 autoselect=True
 unindent_on_backspace=True
 cycle_checkbox_type=True
@@ -27,23 +26,12 @@ auto_reformat=False
 copy_format=Text
 file_templates_folder=~/Templates
 
-[General]
-plugins=["calendar","insertsymbol","printtobrowser","quicknote","gnuplot_ploteditor","tasklist","inlinecalculator","equationeditor"]
-
 [CalendarPlugin]
 embedded=False
-namespace=Calendar
-granularity=Day
 pane=["left_pane","top"]
+granularity=Day
+namespace=Journal
 
-[TaskListPlugin]
-all_checkboxes=True
-tag_by_page=False
-labels=FIXME, TODO
-deadline_by_page=False
-next_label=Next:
-use_workweek=True
-nonactionable_tags=
-included_subtrees=
-excluded_subtrees=
+[VersionControlPlugin]
+autosave=False
 
