--- a/.muttrc
+++ b/.muttrc
@@ -325,3 +325,8 @@ set mbox="~/.maildir"
 set record="+.sent"
 set postponed="+.drafts"
 set spoolfile="~/.maildir"
+
+# diff colors
+color body brightred default "^-.*"
+color body brightgreen default "^\\+.*"
+
