--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule ".vim/bundle/vim-ruby"]
 	path = .vim/bundle/vim-ruby
 	url = git://github.com/vim-ruby/vim-ruby.git
+[submodule ".vim/bundle/vim-colors-solarized"]
+	path = .vim/bundle/vim-colors-solarized
+	url = https://github.com/altercation/vim-colors-solarized
+[submodule ".mutt-colors"]
+	path = .mutt-colors
+	url = https://github.com/altercation/mutt-colors-solarized
+[submodule ".dircolors-solarized"]
+	path = .dircolors-solarized
+	url = https://github.com/seebi/dircolors-solarized
