--- a/.muttrc
+++ b/.muttrc
@@ -330,3 +330,5 @@ set spoolfile="~/.maildir"
 color body brightred default "^-.*"
 color body brightgreen default "^\\+.*"
 
+# Solarized color scheme
+source .mutt-colors/mutt-colors-solarized-dark-16.muttrc
