--- a/.ncmpcpp/config
+++ b/.ncmpcpp/config
@@ -10,3 +10,10 @@ visualizer_fifo_path = "/tmp/mpd.fifo"
 visualizer_output_name = "Visualization FIFO"
 visualizer_sync_interval = "1"
 visualizer_type = "spectrum" # or "wave"
+
+
+# color definitions
+main_window_color = "default"
+main_window_highlight_color = "default"
+alternative_ui_separator_color = "yellow"
+progressbar_color = "yellow"
