--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -28,3 +28,5 @@ set complete=slfS
 highlight! Hint font-size: 12px; color: black; font-weight: bold; border: 1px solid black; background-color: #fff; text-transform: uppercase; padding: 2px; font-family: Terminus, monospace;
 highlight! HintElem background-color: transparent
 highlight! HintActive background-color: transparent
+
+set toolbars=noaddons,nobookmarks,nomenu,nonavigation
