--- a/mplayer/config
+++ b/mplayer/config
@@ -8,7 +8,7 @@ stop-xscreensaver="yes"
 ao=alsa
 
 # Disable xscreensaver
-heartbeat-cmd="xscreensaver-command -deactivate >&- 2>&- &"
+heartbeat-cmd="xscreensaver-command -deactivate"
 
 # Scale tempo by speed
 af=scaletempo
