--- a/xosdutil/xosdutil.cfg
+++ b/xosdutil/xosdutil.cfg
@@ -2,7 +2,7 @@ use_pipe = false;
 
 display:
 {
-	font = "-b&h-luxi mono-bold-r-*-*-40-*-*-*-*-*-*";
+	font = "-xos4-terminus-bold-r-*-*-32-*-*-*-*-*-*-*";
 	color = "yellow";
 	shadow_offset = 2;
 	outline_offset = 1;
