--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,9 @@
 [submodule ".mutt-colors"]
 	path = mutt-colors
 	url = https://github.com/altercation/mutt-colors-solarized
-[submodule ".dircolors-solarized"]
-	path = dircolors-solarized
-	url = https://github.com/seebi/dircolors-solarized
 [submodule "vim/bundle/Vundle.vim"]
 	path = vim/bundle/Vundle.vim
 	url = https://github.com/gmarik/Vundle.vim.git
+[submodule "mc/lib"]
+	path = mc/lib
+	url = https://github.com/iwfmp/mc-solarized-skin.git
